gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b23686.d
version https://git-lfs.github.com/spec/v1
oid sha256:d0be780828105c7007b26500a2d456054b571ba020b1b85897af301107426e0a
size 889
